# solana-integration

./: .editorconfig  .gitignore  .gitlab-ci.yml  Anchor.toml  Makefile  README.md  buffer-keypair.json  go.mod  go.sum  package.json  rollup.config.js  tsconfigBridge.json
.k8s/: 0-bridge-grpc.yml
.k8s/conf/: dockerconfigjson
.k8s/docker/: Dockerfile-bridge-grpc
amm-dex/: README.md
amm-dex/js/: package.json
amm-dex/js/cli/: token-swap-test.ts
amm-dex/program/: Cargo.toml
bridge-grpc/: .dockerignore  Dockerfile  bridge-service.ts  healthcheck-client.js  healthcheck-server.js  msg-helpers.ts  package.json  server.ts  test-client.ts  tsconfig.json
bridge-grpc/proto/: eywa_solana.pb.go  eywa_solana.proto  eywa_solana_grpc.pb.go  eywa_solana_grpc_pb.d.ts  eywa_solana_grpc_pb.js  eywa_solana_pb.d.ts  eywa_solana_pb.js  helloworld.proto
bridge-grpc/subscriptions/: a-subscription.ts  index.ts  sub-oracle-request.ts  sub-slot-change.ts
bridge-grpc/tests/: subscribe-oracle-request.ts  subscribe-slot-change.ts
bridge-ts/: bridge-relayer-client.ts  bridge-user-client.ts  idl.ts  index.ts  package.json  pid.ts  prg-base.ts  prg-bridge.ts  prg-syntesise.ts  prg-test-stub.ts  prg-test-token-faucet.ts  solana-helper.ts  stub-wallet.ts  types.ts
bridge-ts/interfaces/: i-approved-representation-request-event.ts  i-bridge-settings-account.ts  i-burn-completed-event.ts  i-burn-request-event.ts  i-created-representation-event.ts  i-faucet-settings-account.ts  i-mint-data-account.ts  i-oracle-request-event.ts  i-portal-synthesis-settings-account.ts  i-portal-synthesis-synthesize-request-account.ts  i-representation-request-event.ts  i-revert-burn-completed-event.ts  i-revert-burn-request-event.ts  i-revert-synthesize-completed-event.ts  i-revert-synthesize-request-event.ts  i-standalone-instruction.ts  i-synthesize-completed-event.ts  i-synthesize-request-event.ts  i-synthesize-request.ts  i-transaction-account.ts  i-tx-state-account.ts  i-unsynthesize-states-account.ts  index.ts  types.ts
eywa-lib/: Cargo.toml
eywa-lib/src/: lib.rs
keys/: admin-keypair.json  config-devnet.yml  config-local.yml  config-testnet.yml
programs/bridge/: Cargo.toml
programs/bridge/src/: lib.rs
programs/bridge/tests/: tests.rs
programs/eywa-bridge/: Cargo.toml
programs/eywa-bridge-solana/: Cargo.toml
programs/eywa-bridge-solana/src/: lib.rs
programs/eywa-bridge/src/: ctxt.rs  events.rs  lib.rs  pid.in  state.rs
programs/eywa-bridge/tests/: tests.rs
programs/eywa-gas-tank/: Cargo.toml
programs/eywa-gas-tank/src/: lib.rs  pid.in
programs/eywa-lib/: Cargo.toml
programs/eywa-lib/src/: lib.rs
programs/eywa-portal-synthesis/: Cargo.toml
programs/eywa-portal-synthesis/src/: ctxt.rs  events.rs  lib.rs  pid.in  state.rs
programs/test-stub/: Cargo.toml
programs/test-stub/src/: lib.rs  pid.in
programs/test-stub/tests/: tests.rs
programs/test-token-faucet/: Cargo.toml
programs/test-token-faucet/src/: ctxt.rs  events.rs  lib.rs  pid.in  state.rs
programs/test-token-faucet/tests/: tests.rs
proto/: helloworld_grpc_pb.js  helloworld_pb.js
scripts/: check-state.ts  create-representations-2.ts  create-representations.ts  init.ts  set-owner.ts  tokens.json  tsconfig.json
serializer/: instr.go  types.go
solana-serializer/: go.mod  go.sum  types.go
test/: 01_serializer_test.go  connect_test.go  grpc_test.go  init.go  log_subscr_test.go  oracle_request_test.go  program_client_test.go  receive_request_test.go
tests/: bridge.test.ts  eywa-bridge-solana.ts  eywa-portal-solana.ts  token-faucet.test.ts
tests/bridge/: index.ts  receive-request.ts
tests/syntesise/: create-representation.ts  index.ts  mint-synthetic-token.ts
tests/utils/: async-param.ts  send-and-confirm-transaction.ts
utils-ts/: logger.ts  package.json
