[package]
name = "eywa-bridge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = "0.12.0"
solana-program = "1.7.8"
eywa-lib =  { path = "../eywa-lib" }

[dev-dependencies]
solana-program-test = "1.7.8"
solana-sdk = "1.7.8"
