[package]
name = "eywa-bridge-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "eywa_bridge_solana"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
zeroize="~1.3.0"
anchor-lang = "0.11.1"
