[package]
name = "eywa-bridge-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "eywa_bridge_solana"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
zeroize="~1.3.0"
anchor-lang = "0.12.0"
anchor-spl = "0.12.0"
solana-program = "=1.7.8"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "=1.7.8"
solana-sdk = "=1.7.8"

