[package]
name = "eywa-gas-tank"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "eywa_gas_tank"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.18.2"
solana-program = "=1.8.0"

[dev-dependencies]
solana-program-test = "=1.8.0"
solana-sdk = "=1.8.0"
