[package]
name = "eywa-portal-synthesis"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "eywa_portal_synthesis"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
ethabi = { version = "15.0.0", default-features = false }
ethereum-types = { version = "0.12.1", default-features = false }
eywa-bridge =  { path = "../eywa-bridge", features = ["cpi"] }
anchor-lang = "=0.18.2"
anchor-spl = "=0.18.2"
solana-program = "=1.8.0"
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "=1.8.0"
solana-sdk = "=1.8.0"

